# GED-SYSTEM

GED-api/: .env.example  Dockerfile  GED_API_Collection.json  alembic.ini  create_admin.py  docker-compose.yml  fix_audit_logs.py  main.py  pyproject.toml  rbac_settings.json  requirements.txt  system_settings.json
GED-api/alembic/: env.py
GED-api/alembic/versions/: 001_initial_migration.py  b68c6b4bb2f6_advanced_document_features.py
GED-api/app/: main.py
GED-api/app/api/: deps.py  middleware.py
GED-api/app/api/routers/: __init__.py  auth.py  documents.py  favorites.py  folders.py  rbac.py  recently_viewed.py  settings.py  tags.py  templates.py
GED-api/app/core/: config.py  database.py  response.py
GED-api/app/jobs/: expiry_job.py  lock_job.py
GED-api/app/models/: __init__.py  audit.py  document.py  document_template.py  document_view.py  folder.py  tag.py  user.py  user_favorite.py  workflow.py
GED-api/app/repositories/: base.py  document.py  folder.py
GED-api/app/schemas/: __init__.py  audit.py  bulk.py  document.py  favorite.py  folder.py  rbac.py  system_settings.py  tag.py  template.py  user.py  workflow.py
GED-api/app/services/: auth_service.py  document.py  favorite_service.py  rbac_service.py  storage.py  system_settings.py  template_service.py  view_tracking_service.py
GED-api/directories/: 03f8ad23-ed7e-4a52-9d02-6c90619c5d32.md  ef6df259-dd06-4206-8567-17174ed716ad.xlsx
GED-front/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
GED-front/src/: App.tsx  index.css
GED-front/src/config/: api.ts
(+91 files in other folders)
